fix: Resolve site build errors and template issues
* Remove invalid 'path' field from posts section

* Create proper template files for homepage rendering

* Fix theme integration issues

* Update configuration and content files

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
 
 {% block main_content %}
-    <!-- * using the section component as substitute for the homepage -->
-    {{ post_macros::content(page=section) }}
+    <main>
+        <article>
+            <section class="body">
+                {{ post_macros::page_header(title=section.title) }}
+                {{ section.content | safe }}
+            </section>
+        </article>
+    </main>
 {% endblock main_content %}
