--- a/static/custom.css
+++ b/static/custom.css
@@ -66,8 +66,49 @@ nav .left-nav .socials .social img {
   display: flex;
   flex-direction: column;
   margin-bottom: 2rem;
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+  overflow: hidden;
 }
 
 .card-info {
   flex: 1;
+  padding: 1.5rem;
+}
+
+.card-title {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+.card-title a {
+  text-decoration: none;
+  color: var(--text-0);
+}
+
+.card-title a:hover {
+  text-decoration: underline;
+  color: var(--primary-color);
+}
+
+.card-description {
+  margin-bottom: 1rem;
+  line-height: 1.6;
+}
+
+.card-media {
+  max-height: 200px;
+  overflow: hidden;
+}
+
+.card-image {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.card-video {
+  width: 100%;
+  height: auto;
+  display: block;
 }
