--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,5 +1,6 @@
 <footer>
-    <p>Made with <a href="https://www.getzola.org/" target="_blank">Zola</a>, using a 
-        <a href="https://github.com/dhruv-ahuja/apollo-custom" target="_blank">custom variant</a> of the 
-        <a href="https://github.com/not-matthias/apollo" target="_blank">Apollo</a> theme.</p>
+  <p>
+    Made with <a href="https://www.getzola.org/" target="_blank">Zola</a> and the
+    <a href="https://github.com/not-matthias/apollo" target="_blank">Apollo</a> theme.
+  </p>
 </footer>
